// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SidePanel [common] example testing should match snapshot(s) for 01.no-modal 1`] = `
<Overlay
  className="lucid-SidePanel lucid-SidePanel-is-expanded lucid-SidePanel-position-right lucid-SidePanel-is-animated"
  isAnimated={true}
  isModal={false}
  isShown={true}
  onBackgroundClick={[Function]}
  onEscape={[Function]}
  style={
    Object {
      "marginTop": 0,
    }
  }
>
  <div
    className="lucid-SidePanel-pane"
    style={
      Object {
        "marginTop": 0,
        "width": 240,
      }
    }
  >
    <div
      className="lucid-SidePanel-header"
    >
      <div
        className="lucid-SidePanel-header-inner-wrapper"
      >
        <div
          className="lucid-SidePanel-header-content"
        >
          Stumptown keytar schlitz
        </div>
        <Button
          className="lucid-SidePanel-header-closer-button"
          hasOnlyIcon={true}
          isActive={false}
          isDisabled={false}
          kind="invisible"
          onClick={[Function]}
          type="button"
        >
          <CloseIcon
            aspectRatio="xMidYMid meet"
            className="lucid-SidePanel-header-closer"
            color="primary"
            isClickable={true}
            isDisabled={false}
            onClick={[Function]}
            onSelect={[Function]}
            size={14}
            viewBox="0 0 16 16"
          />
        </Button>
      </div>
    </div>
    <div
      className="lucid-SidePanel-body"
    >
      <DragCaptureZone
        className="lucid-SidePanel-grabber"
        onDrag={[Function]}
        onDragCancel={[Function]}
        onDragEnd={[Function]}
        onDragStart={[Function]}
      >
        <GripperVerticalIcon
          aspectRatio="xMidYMid meet"
          color="primary"
          isClickable={false}
          isDisabled={false}
          onClick={[Function]}
          onSelect={[Function]}
          size={16}
          viewBox="0 0 16 16"
          width="20"
        />
      </DragCaptureZone>
      <div
        className="lucid-SidePanel-content"
      >
        <p>
          Stumptown keytar schlitz, vinyl vexillologist humblebrag sartorial crucifix cornhole. Four dollar toast 8-bit taiyaki asymmetrical helvetica kitsch farm-to-table thundercats. Occupy hammock waistcoat pabst ethical. Sartorial umami cardigan, farm-to-table bespoke 90's schlitz cray drinking vinegar actually freegan bushwick wolf. Shabby chic tofu celiac shaman, twee af squid blue bottle street art. Lumbersexual lo-fi stumptown, iceland locavore tacos chillwave portland beard celiac polaroid.
        </p>
        <p>
          Keffiyeh kinfolk lumbersexual, austin ennui sustainable mlkshk four loko selfies ramps pop-up coloring book before they sold out yuccie biodiesel. Yuccie taxidermy beard, +1 church-key umami echo park synth. Fanny pack farm-to-table pok pok, next level trust fund live-edge asymmetrical art party intelligentsia listicle sriracha. Tote bag ugh meggings, selfies vegan blog locavore messenger bag chambray etsy heirloom cronut enamel pin hammock umami. Bushwick venmo activated charcoal, mumblecore skateboard hashtag literally brooklyn etsy ennui 3 wolf moon. Before they sold out blog iPhone subway tile, truffaut dreamcatcher organic raclette portland whatever brooklyn succulents flexitarian gentrify cray. Kogi subway tile gochujang dreamcatcher.
        </p>
      </div>
    </div>
  </div>
</Overlay>
`;

exports[`SidePanel [common] example testing should match snapshot(s) for 02.with-defaults 1`] = `
<Overlay
  className="lucid-SidePanel lucid-SidePanel-is-expanded lucid-SidePanel-position-right lucid-SidePanel-is-animated"
  isAnimated={true}
  isModal={true}
  isShown={true}
  onBackgroundClick={[Function]}
  onEscape={[Function]}
  style={
    Object {
      "marginTop": 0,
    }
  }
>
  <div
    className="lucid-SidePanel-pane"
    style={
      Object {
        "marginTop": 0,
        "width": 240,
      }
    }
  >
    <div
      className="lucid-SidePanel-body"
    >
      <DragCaptureZone
        className="lucid-SidePanel-grabber"
        onDrag={[Function]}
        onDragCancel={[Function]}
        onDragEnd={[Function]}
        onDragStart={[Function]}
      >
        <GripperVerticalIcon
          aspectRatio="xMidYMid meet"
          color="primary"
          isClickable={false}
          isDisabled={false}
          onClick={[Function]}
          onSelect={[Function]}
          size={16}
          viewBox="0 0 16 16"
          width="20"
        />
      </DragCaptureZone>
      <div
        className="lucid-SidePanel-content"
      >
        <p
          style={
            Object {
              "margin": "0 0 16px 0",
            }
          }
        >
          Stumptown keytar schlitz, vinyl vexillologist humblebrag sartorial crucifix cornhole. Four dollar toast 8-bit taiyaki asymmetrical helvetica kitsch farm-to-table thundercats. Occupy hammock waistcoat pabst ethical. Sartorial umami cardigan, farm-to-table bespoke 90's schlitz cray drinking vinegar actually freegan bushwick wolf. Shabby chic tofu celiac shaman, twee af squid blue bottle street art. Lumbersexual lo-fi stumptown, iceland locavore tacos chillwave portland beard celiac polaroid.
        </p>
        <p
          style={
            Object {
              "margin": "0 0 16px 0",
            }
          }
        >
          Keffiyeh kinfolk lumbersexual, austin ennui sustainable mlkshk four loko selfies ramps pop-up coloring book before they sold out yuccie biodiesel. Yuccie taxidermy beard, +1 church-key umami echo park synth. Fanny pack farm-to-table pok pok, next level trust fund live-edge asymmetrical art party intelligentsia listicle sriracha. Tote bag ugh meggings, selfies vegan blog locavore messenger bag chambray etsy heirloom cronut enamel pin hammock umami. Bushwick venmo activated charcoal, mumblecore skateboard hashtag literally brooklyn etsy ennui 3 wolf moon. Before they sold out blog iPhone subway tile, truffaut dreamcatcher organic raclette portland whatever brooklyn succulents flexitarian gentrify cray. Kogi subway tile gochujang dreamcatcher.
        </p>
      </div>
    </div>
  </div>
</Overlay>
`;

exports[`SidePanel [common] example testing should match snapshot(s) for 03.with-header 1`] = `
<Overlay
  className="lucid-SidePanel lucid-SidePanel-is-expanded lucid-SidePanel-position-right lucid-SidePanel-is-animated"
  isAnimated={true}
  isModal={true}
  isShown={true}
  onBackgroundClick={[Function]}
  onEscape={[Function]}
  style={
    Object {
      "marginTop": 0,
    }
  }
>
  <div
    className="lucid-SidePanel-pane"
    style={
      Object {
        "marginTop": 0,
        "width": 500,
      }
    }
  >
    <div
      className="lucid-SidePanel-header"
    >
      <div
        className="lucid-SidePanel-header-inner-wrapper"
      >
        <div
          className="lucid-SidePanel-header-content"
        >
          <div>
            <div>
              <strong>
                Rich content
              </strong>
            </div>
          </div>
        </div>
        <Button
          className="lucid-SidePanel-header-closer-button"
          hasOnlyIcon={true}
          isActive={false}
          isDisabled={false}
          kind="invisible"
          onClick={[Function]}
          type="button"
        >
          <CloseIcon
            aspectRatio="xMidYMid meet"
            className="lucid-SidePanel-header-closer"
            color="primary"
            isClickable={true}
            isDisabled={false}
            onClick={[Function]}
            onSelect={[Function]}
            size={14}
            viewBox="0 0 16 16"
          />
        </Button>
      </div>
    </div>
    <div
      className="lucid-SidePanel-body"
    >
      <DragCaptureZone
        className="lucid-SidePanel-grabber"
        onDrag={[Function]}
        onDragCancel={[Function]}
        onDragEnd={[Function]}
        onDragStart={[Function]}
      >
        <GripperVerticalIcon
          aspectRatio="xMidYMid meet"
          color="primary"
          isClickable={false}
          isDisabled={false}
          onClick={[Function]}
          onSelect={[Function]}
          size={16}
          viewBox="0 0 16 16"
          width="20"
        />
      </DragCaptureZone>
      <div
        className="lucid-SidePanel-content"
      >
        <SidePanel.Header>
          <div>
            <div>
              <strong>
                Rich content
              </strong>
            </div>
          </div>
        </SidePanel.Header>
        <p
          style={
            Object {
              "margin": "0 0 16px 0",
            }
          }
        >
          Stumptown keytar schlitz, vinyl vexillologist humblebrag sartorial crucifix cornhole. Four dollar toast 8-bit taiyaki asymmetrical helvetica kitsch farm-to-table thundercats. Occupy hammock waistcoat pabst ethical. Sartorial umami cardigan, farm-to-table bespoke 90's schlitz cray drinking vinegar actually freegan bushwick wolf. Shabby chic tofu celiac shaman, twee af squid blue bottle street art. Lumbersexual lo-fi stumptown, iceland locavore tacos chillwave portland beard celiac polaroid.
        </p>
        <p
          style={
            Object {
              "margin": "0 0 16px 0",
            }
          }
        >
          Keffiyeh kinfolk lumbersexual, austin ennui sustainable mlkshk four loko selfies ramps pop-up coloring book before they sold out yuccie biodiesel. Yuccie taxidermy beard, +1 church-key umami echo park synth. Fanny pack farm-to-table pok pok, next level trust fund live-edge asymmetrical art party intelligentsia listicle sriracha. Tote bag ugh meggings, selfies vegan blog locavore messenger bag chambray etsy heirloom cronut enamel pin hammock umami. Bushwick venmo activated charcoal, mumblecore skateboard hashtag literally brooklyn etsy ennui 3 wolf moon. Before they sold out blog iPhone subway tile, truffaut dreamcatcher organic raclette portland whatever brooklyn succulents flexitarian gentrify cray. Kogi subway tile gochujang dreamcatcher.
        </p>
      </div>
    </div>
  </div>
</Overlay>
`;

exports[`SidePanel [common] example testing should match snapshot(s) for 04.with-left-position 1`] = `
<Overlay
  className="lucid-SidePanel lucid-SidePanel-is-expanded lucid-SidePanel-position-left lucid-SidePanel-is-animated"
  isAnimated={true}
  isModal={true}
  isShown={true}
  onBackgroundClick={[Function]}
  onEscape={[Function]}
  style={
    Object {
      "marginTop": 0,
    }
  }
>
  <div
    className="lucid-SidePanel-pane"
    style={
      Object {
        "marginTop": 0,
        "width": 240,
      }
    }
  >
    <div
      className="lucid-SidePanel-header"
    >
      <div
        className="lucid-SidePanel-header-inner-wrapper"
      >
        <div
          className="lucid-SidePanel-header-content"
        >
          Stumptown keytar schlitz
        </div>
        <Button
          className="lucid-SidePanel-header-closer-button"
          hasOnlyIcon={true}
          isActive={false}
          isDisabled={false}
          kind="invisible"
          onClick={[Function]}
          type="button"
        >
          <CloseIcon
            aspectRatio="xMidYMid meet"
            className="lucid-SidePanel-header-closer"
            color="primary"
            isClickable={true}
            isDisabled={false}
            onClick={[Function]}
            onSelect={[Function]}
            size={14}
            viewBox="0 0 16 16"
          />
        </Button>
      </div>
    </div>
    <div
      className="lucid-SidePanel-body"
    >
      <DragCaptureZone
        className="lucid-SidePanel-grabber"
        onDrag={[Function]}
        onDragCancel={[Function]}
        onDragEnd={[Function]}
        onDragStart={[Function]}
      >
        <GripperVerticalIcon
          aspectRatio="xMidYMid meet"
          color="primary"
          isClickable={false}
          isDisabled={false}
          onClick={[Function]}
          onSelect={[Function]}
          size={16}
          viewBox="0 0 16 16"
          width="20"
        />
      </DragCaptureZone>
      <div
        className="lucid-SidePanel-content"
      >
        <p
          style={
            Object {
              "margin": "0 0 16px 0",
            }
          }
        >
          Stumptown keytar schlitz, vinyl vexillologist humblebrag sartorial crucifix cornhole. Four dollar toast 8-bit taiyaki asymmetrical helvetica kitsch farm-to-table thundercats. Occupy hammock waistcoat pabst ethical. Sartorial umami cardigan, farm-to-table bespoke 90's schlitz cray drinking vinegar actually freegan bushwick wolf. Shabby chic tofu celiac shaman, twee af squid blue bottle street art. Lumbersexual lo-fi stumptown, iceland locavore tacos chillwave portland beard celiac polaroid.
        </p>
        <p
          style={
            Object {
              "margin": "0 0 16px 0",
            }
          }
        >
          Keffiyeh kinfolk lumbersexual, austin ennui sustainable mlkshk four loko selfies ramps pop-up coloring book before they sold out yuccie biodiesel. Yuccie taxidermy beard, +1 church-key umami echo park synth. Fanny pack farm-to-table pok pok, next level trust fund live-edge asymmetrical art party intelligentsia listicle sriracha. Tote bag ugh meggings, selfies vegan blog locavore messenger bag chambray etsy heirloom cronut enamel pin hammock umami. Bushwick venmo activated charcoal, mumblecore skateboard hashtag literally brooklyn etsy ennui 3 wolf moon. Before they sold out blog iPhone subway tile, truffaut dreamcatcher organic raclette portland whatever brooklyn succulents flexitarian gentrify cray. Kogi subway tile gochujang dreamcatcher.
        </p>
      </div>
    </div>
  </div>
</Overlay>
`;

exports[`SidePanel [common] example testing should match snapshot(s) for 05.without-animation 1`] = `
<Overlay
  className="lucid-SidePanel lucid-SidePanel-is-expanded lucid-SidePanel-position-right"
  isAnimated={false}
  isModal={true}
  isShown={true}
  onBackgroundClick={[Function]}
  onEscape={[Function]}
  style={
    Object {
      "marginTop": 0,
    }
  }
>
  <div
    className="lucid-SidePanel-pane"
    style={
      Object {
        "marginTop": 0,
        "width": 240,
      }
    }
  >
    <div
      className="lucid-SidePanel-header"
    >
      <div
        className="lucid-SidePanel-header-inner-wrapper"
      >
        <div
          className="lucid-SidePanel-header-content"
        >
          Stumptown keytar schlitz
        </div>
        <Button
          className="lucid-SidePanel-header-closer-button"
          hasOnlyIcon={true}
          isActive={false}
          isDisabled={false}
          kind="invisible"
          onClick={[Function]}
          type="button"
        >
          <CloseIcon
            aspectRatio="xMidYMid meet"
            className="lucid-SidePanel-header-closer"
            color="primary"
            isClickable={true}
            isDisabled={false}
            onClick={[Function]}
            onSelect={[Function]}
            size={14}
            viewBox="0 0 16 16"
          />
        </Button>
      </div>
    </div>
    <div
      className="lucid-SidePanel-body"
    >
      <DragCaptureZone
        className="lucid-SidePanel-grabber"
        onDrag={[Function]}
        onDragCancel={[Function]}
        onDragEnd={[Function]}
        onDragStart={[Function]}
      >
        <GripperVerticalIcon
          aspectRatio="xMidYMid meet"
          color="primary"
          isClickable={false}
          isDisabled={false}
          onClick={[Function]}
          onSelect={[Function]}
          size={16}
          viewBox="0 0 16 16"
          width="20"
        />
      </DragCaptureZone>
      <div
        className="lucid-SidePanel-content"
      >
        <p>
          Stumptown keytar schlitz, vinyl vexillologist humblebrag sartorial crucifix cornhole. Four dollar toast 8-bit taiyaki asymmetrical helvetica kitsch farm-to-table thundercats. Occupy hammock waistcoat pabst ethical. Sartorial umami cardigan, farm-to-table bespoke 90's schlitz cray drinking vinegar actually freegan bushwick wolf. Shabby chic tofu celiac shaman, twee af squid blue bottle street art. Lumbersexual lo-fi stumptown, iceland locavore tacos chillwave portland beard celiac polaroid.
        </p>
        <p>
          Keffiyeh kinfolk lumbersexual, austin ennui sustainable mlkshk four loko selfies ramps pop-up coloring book before they sold out yuccie biodiesel. Yuccie taxidermy beard, +1 church-key umami echo park synth. Fanny pack farm-to-table pok pok, next level trust fund live-edge asymmetrical art party intelligentsia listicle sriracha. Tote bag ugh meggings, selfies vegan blog locavore messenger bag chambray etsy heirloom cronut enamel pin hammock umami. Bushwick venmo activated charcoal, mumblecore skateboard hashtag literally brooklyn etsy ennui 3 wolf moon. Before they sold out blog iPhone subway tile, truffaut dreamcatcher organic raclette portland whatever brooklyn succulents flexitarian gentrify cray. Kogi subway tile gochujang dreamcatcher.
        </p>
      </div>
    </div>
  </div>
</Overlay>
`;

exports[`SidePanel [common] example testing should match snapshot(s) for 06.without-resize 1`] = `
<Overlay
  className="lucid-SidePanel lucid-SidePanel-is-expanded lucid-SidePanel-position-right lucid-SidePanel-is-animated"
  isAnimated={true}
  isModal={true}
  isShown={true}
  onBackgroundClick={[Function]}
  onEscape={[Function]}
  style={
    Object {
      "marginTop": 0,
    }
  }
>
  <div
    className="lucid-SidePanel-pane"
    style={
      Object {
        "marginTop": 0,
        "width": 240,
      }
    }
  >
    <div
      className="lucid-SidePanel-header"
    >
      <div
        className="lucid-SidePanel-header-inner-wrapper"
      >
        <div
          className="lucid-SidePanel-header-content"
        >
          Stumptown keytar schlitz
        </div>
        <Button
          className="lucid-SidePanel-header-closer-button"
          hasOnlyIcon={true}
          isActive={false}
          isDisabled={false}
          kind="invisible"
          onClick={[Function]}
          type="button"
        >
          <CloseIcon
            aspectRatio="xMidYMid meet"
            className="lucid-SidePanel-header-closer"
            color="primary"
            isClickable={true}
            isDisabled={false}
            onClick={[Function]}
            onSelect={[Function]}
            size={14}
            viewBox="0 0 16 16"
          />
        </Button>
      </div>
    </div>
    <div
      className="lucid-SidePanel-body"
    >
      <div
        className="lucid-SidePanel-content"
      >
        <p>
          Stumptown keytar schlitz, vinyl vexillologist humblebrag sartorial crucifix cornhole. Four dollar toast 8-bit taiyaki asymmetrical helvetica kitsch farm-to-table thundercats. Occupy hammock waistcoat pabst ethical. Sartorial umami cardigan, farm-to-table bespoke 90's schlitz cray drinking vinegar actually freegan bushwick wolf. Shabby chic tofu celiac shaman, twee af squid blue bottle street art. Lumbersexual lo-fi stumptown, iceland locavore tacos chillwave portland beard celiac polaroid.
        </p>
        <p>
          Keffiyeh kinfolk lumbersexual, austin ennui sustainable mlkshk four loko selfies ramps pop-up coloring book before they sold out yuccie biodiesel. Yuccie taxidermy beard, +1 church-key umami echo park synth. Fanny pack farm-to-table pok pok, next level trust fund live-edge asymmetrical art party intelligentsia listicle sriracha. Tote bag ugh meggings, selfies vegan blog locavore messenger bag chambray etsy heirloom cronut enamel pin hammock umami. Bushwick venmo activated charcoal, mumblecore skateboard hashtag literally brooklyn etsy ennui 3 wolf moon. Before they sold out blog iPhone subway tile, truffaut dreamcatcher organic raclette portland whatever brooklyn succulents flexitarian gentrify cray. Kogi subway tile gochujang dreamcatcher.
        </p>
      </div>
    </div>
  </div>
</Overlay>
`;

exports[`SidePanel [common] example testing should match snapshot(s) for 07.with-resize 1`] = `
<Overlay
  className="lucid-SidePanel lucid-SidePanel-is-expanded lucid-SidePanel-position-right lucid-SidePanel-is-animated"
  isAnimated={true}
  isModal={true}
  isShown={true}
  onBackgroundClick={[Function]}
  onEscape={[Function]}
  style={
    Object {
      "marginTop": 0,
    }
  }
>
  <div
    className="lucid-SidePanel-pane"
    style={
      Object {
        "marginTop": 0,
        "width": 240,
      }
    }
  >
    <div
      className="lucid-SidePanel-header"
    >
      <div
        className="lucid-SidePanel-header-inner-wrapper"
      >
        <div
          className="lucid-SidePanel-header-content"
        >
          Stumptown keytar schlitz
        </div>
        <Button
          className="lucid-SidePanel-header-closer-button"
          hasOnlyIcon={true}
          isActive={false}
          isDisabled={false}
          kind="invisible"
          onClick={[Function]}
          type="button"
        >
          <CloseIcon
            aspectRatio="xMidYMid meet"
            className="lucid-SidePanel-header-closer"
            color="primary"
            isClickable={true}
            isDisabled={false}
            onClick={[Function]}
            onSelect={[Function]}
            size={14}
            viewBox="0 0 16 16"
          />
        </Button>
      </div>
    </div>
    <div
      className="lucid-SidePanel-body"
    >
      <DragCaptureZone
        className="lucid-SidePanel-grabber"
        onDrag={[Function]}
        onDragCancel={[Function]}
        onDragEnd={[Function]}
        onDragStart={[Function]}
      >
        <GripperVerticalIcon
          aspectRatio="xMidYMid meet"
          color="primary"
          isClickable={false}
          isDisabled={false}
          onClick={[Function]}
          onSelect={[Function]}
          size={16}
          viewBox="0 0 16 16"
          width="20"
        />
      </DragCaptureZone>
      <div
        className="lucid-SidePanel-content"
      >
        <p>
          Stumptown keytar schlitz, vinyl vexillologist humblebrag sartorial crucifix cornhole. Four dollar toast 8-bit taiyaki asymmetrical helvetica kitsch farm-to-table thundercats. Occupy hammock waistcoat pabst ethical. Sartorial umami cardigan, farm-to-table bespoke 90's schlitz cray drinking vinegar actually freegan bushwick wolf. Shabby chic tofu celiac shaman, twee af squid blue bottle street art. Lumbersexual lo-fi stumptown, iceland locavore tacos chillwave portland beard celiac polaroid.
        </p>
        <p>
          Keffiyeh kinfolk lumbersexual, austin ennui sustainable mlkshk four loko selfies ramps pop-up coloring book before they sold out yuccie biodiesel. Yuccie taxidermy beard, +1 church-key umami echo park synth. Fanny pack farm-to-table pok pok, next level trust fund live-edge asymmetrical art party intelligentsia listicle sriracha. Tote bag ugh meggings, selfies vegan blog locavore messenger bag chambray etsy heirloom cronut enamel pin hammock umami. Bushwick venmo activated charcoal, mumblecore skateboard hashtag literally brooklyn etsy ennui 3 wolf moon. Before they sold out blog iPhone subway tile, truffaut dreamcatcher organic raclette portland whatever brooklyn succulents flexitarian gentrify cray. Kogi subway tile gochujang dreamcatcher.
        </p>
      </div>
    </div>
  </div>
</Overlay>
`;

exports[`SidePanel [common] example testing should match snapshot(s) for 08.with-top-margin 1`] = `
<Overlay
  className="lucid-SidePanel lucid-SidePanel-is-expanded lucid-SidePanel-position-right lucid-SidePanel-is-animated"
  isAnimated={true}
  isModal={true}
  isShown={true}
  onBackgroundClick={[Function]}
  onEscape={[Function]}
  style={
    Object {
      "marginTop": 50,
    }
  }
>
  <div
    className="lucid-SidePanel-pane"
    style={
      Object {
        "marginTop": 50,
        "width": 240,
      }
    }
  >
    <div
      className="lucid-SidePanel-header"
    >
      <div
        className="lucid-SidePanel-header-inner-wrapper"
      >
        <div
          className="lucid-SidePanel-header-content"
        >
          <div>
            <div>
              <strong>
                Rich content
              </strong>
            </div>
          </div>
        </div>
        <Button
          className="lucid-SidePanel-header-closer-button"
          hasOnlyIcon={true}
          isActive={false}
          isDisabled={false}
          kind="invisible"
          onClick={[Function]}
          type="button"
        >
          <CloseIcon
            aspectRatio="xMidYMid meet"
            className="lucid-SidePanel-header-closer"
            color="primary"
            isClickable={true}
            isDisabled={false}
            onClick={[Function]}
            onSelect={[Function]}
            size={14}
            viewBox="0 0 16 16"
          />
        </Button>
      </div>
    </div>
    <div
      className="lucid-SidePanel-body"
    >
      <DragCaptureZone
        className="lucid-SidePanel-grabber"
        onDrag={[Function]}
        onDragCancel={[Function]}
        onDragEnd={[Function]}
        onDragStart={[Function]}
      >
        <GripperVerticalIcon
          aspectRatio="xMidYMid meet"
          color="primary"
          isClickable={false}
          isDisabled={false}
          onClick={[Function]}
          onSelect={[Function]}
          size={16}
          viewBox="0 0 16 16"
          width="20"
        />
      </DragCaptureZone>
      <div
        className="lucid-SidePanel-content"
      >
        <SidePanel.Header>
          <div>
            <div>
              <strong>
                Rich content
              </strong>
            </div>
          </div>
        </SidePanel.Header>
        <p
          style={
            Object {
              "margin": "0 0 16px 0",
            }
          }
        >
          Stumptown keytar schlitz, vinyl vexillologist humblebrag sartorial crucifix cornhole. Four dollar toast 8-bit taiyaki asymmetrical helvetica kitsch farm-to-table thundercats. Occupy hammock waistcoat pabst ethical. Sartorial umami cardigan, farm-to-table bespoke 90's schlitz cray drinking vinegar actually freegan bushwick wolf. Shabby chic tofu celiac shaman, twee af squid blue bottle street art. Lumbersexual lo-fi stumptown, iceland locavore tacos chillwave portland beard celiac polaroid.
        </p>
        <p
          style={
            Object {
              "margin": "0 0 16px 0",
            }
          }
        >
          Keffiyeh kinfolk lumbersexual, austin ennui sustainable mlkshk four loko selfies ramps pop-up coloring book before they sold out yuccie biodiesel. Yuccie taxidermy beard, +1 church-key umami echo park synth. Fanny pack farm-to-table pok pok, next level trust fund live-edge asymmetrical art party intelligentsia listicle sriracha. Tote bag ugh meggings, selfies vegan blog locavore messenger bag chambray etsy heirloom cronut enamel pin hammock umami. Bushwick venmo activated charcoal, mumblecore skateboard hashtag literally brooklyn etsy ennui 3 wolf moon. Before they sold out blog iPhone subway tile, truffaut dreamcatcher organic raclette portland whatever brooklyn succulents flexitarian gentrify cray. Kogi subway tile gochujang dreamcatcher.
        </p>
      </div>
    </div>
  </div>
</Overlay>
`;

exports[`SidePanel Header should match snapshot 1`] = `
<Overlay
  className="lucid-SidePanel lucid-SidePanel-is-expanded lucid-SidePanel-position-right lucid-SidePanel-is-animated"
  isAnimated={true}
  isModal={true}
  isShown={true}
  onBackgroundClick={[Function]}
  onEscape={[Function]}
  style={
    Object {
      "marginTop": 0,
    }
  }
>
  <div
    className="lucid-SidePanel-pane"
    style={
      Object {
        "marginTop": 0,
        "width": 240,
      }
    }
  >
    <div
      className="lucid-SidePanel-header"
    >
      <div
        className="lucid-SidePanel-header-inner-wrapper"
      >
        <div
          className="lucid-SidePanel-header-content"
        >
          This is a header
        </div>
        <Button
          className="lucid-SidePanel-header-closer-button"
          hasOnlyIcon={true}
          isActive={false}
          isDisabled={false}
          kind="invisible"
          onClick={[Function]}
          type="button"
        >
          <CloseIcon
            aspectRatio="xMidYMid meet"
            className="lucid-SidePanel-header-closer"
            color="primary"
            isClickable={true}
            isDisabled={false}
            onClick={[Function]}
            onSelect={[Function]}
            size={14}
            viewBox="0 0 16 16"
          />
        </Button>
      </div>
    </div>
    <div
      className="lucid-SidePanel-body"
    >
      <DragCaptureZone
        className="lucid-SidePanel-grabber"
        onDrag={[Function]}
        onDragCancel={[Function]}
        onDragEnd={[Function]}
        onDragStart={[Function]}
      >
        <GripperVerticalIcon
          aspectRatio="xMidYMid meet"
          color="primary"
          isClickable={false}
          isDisabled={false}
          onClick={[Function]}
          onSelect={[Function]}
          size={16}
          viewBox="0 0 16 16"
          width="20"
        />
      </DragCaptureZone>
      <div
        className="lucid-SidePanel-content"
      />
    </div>
  </div>
</Overlay>
`;

exports[`SidePanel isAnimated should match snapshot 1`] = `
<Overlay
  className="lucid-SidePanel lucid-SidePanel-is-expanded lucid-SidePanel-position-right"
  isAnimated={false}
  isModal={true}
  isShown={true}
  onBackgroundClick={[Function]}
  onEscape={[Function]}
  style={
    Object {
      "marginTop": 0,
    }
  }
>
  <div
    className="lucid-SidePanel-pane"
    style={
      Object {
        "marginTop": 0,
        "width": 240,
      }
    }
  >
    <div
      className="lucid-SidePanel-body"
    >
      <DragCaptureZone
        className="lucid-SidePanel-grabber"
        onDrag={[Function]}
        onDragCancel={[Function]}
        onDragEnd={[Function]}
        onDragStart={[Function]}
      >
        <GripperVerticalIcon
          aspectRatio="xMidYMid meet"
          color="primary"
          isClickable={false}
          isDisabled={false}
          onClick={[Function]}
          onSelect={[Function]}
          size={16}
          viewBox="0 0 16 16"
          width="20"
        />
      </DragCaptureZone>
      <div
        className="lucid-SidePanel-content"
      />
    </div>
  </div>
</Overlay>
`;

exports[`SidePanel isExpanded should match snapshot 1`] = `
<Overlay
  className="lucid-SidePanel lucid-SidePanel-position-right lucid-SidePanel-is-animated"
  isAnimated={true}
  isModal={true}
  isShown={false}
  onBackgroundClick={[Function]}
  onEscape={[Function]}
  style={
    Object {
      "marginTop": 0,
    }
  }
>
  <div
    className="lucid-SidePanel-pane"
    style={
      Object {
        "marginTop": 0,
        "width": 240,
      }
    }
  >
    <div
      className="lucid-SidePanel-body"
    >
      <DragCaptureZone
        className="lucid-SidePanel-grabber"
        onDrag={[Function]}
        onDragCancel={[Function]}
        onDragEnd={[Function]}
        onDragStart={[Function]}
      >
        <GripperVerticalIcon
          aspectRatio="xMidYMid meet"
          color="primary"
          isClickable={false}
          isDisabled={false}
          onClick={[Function]}
          onSelect={[Function]}
          size={16}
          viewBox="0 0 16 16"
          width="20"
        />
      </DragCaptureZone>
      <div
        className="lucid-SidePanel-content"
      />
    </div>
  </div>
</Overlay>
`;

exports[`SidePanel isResizeDisabled should match snapshot 1`] = `
<Overlay
  className="lucid-SidePanel lucid-SidePanel-is-expanded lucid-SidePanel-position-right lucid-SidePanel-is-animated"
  isAnimated={true}
  isModal={true}
  isShown={true}
  onBackgroundClick={[Function]}
  onEscape={[Function]}
  style={
    Object {
      "marginTop": 0,
    }
  }
>
  <div
    className="lucid-SidePanel-pane"
    style={
      Object {
        "marginTop": 0,
        "width": 240,
      }
    }
  >
    <div
      className="lucid-SidePanel-body"
    >
      <div
        className="lucid-SidePanel-content"
      />
    </div>
  </div>
</Overlay>
`;

exports[`SidePanel position should match snapshot 1`] = `
<Overlay
  className="lucid-SidePanel lucid-SidePanel-is-expanded lucid-SidePanel-position-left lucid-SidePanel-is-animated"
  isAnimated={true}
  isModal={true}
  isShown={true}
  onBackgroundClick={[Function]}
  onEscape={[Function]}
  style={
    Object {
      "marginTop": 0,
    }
  }
>
  <div
    className="lucid-SidePanel-pane"
    style={
      Object {
        "marginTop": 0,
        "width": 240,
      }
    }
  >
    <div
      className="lucid-SidePanel-body"
    >
      <DragCaptureZone
        className="lucid-SidePanel-grabber"
        onDrag={[Function]}
        onDragCancel={[Function]}
        onDragEnd={[Function]}
        onDragStart={[Function]}
      >
        <GripperVerticalIcon
          aspectRatio="xMidYMid meet"
          color="primary"
          isClickable={false}
          isDisabled={false}
          onClick={[Function]}
          onSelect={[Function]}
          size={16}
          viewBox="0 0 16 16"
          width="20"
        />
      </DragCaptureZone>
      <div
        className="lucid-SidePanel-content"
      />
    </div>
  </div>
</Overlay>
`;

exports[`SidePanel width should match snapshot 1`] = `
<Overlay
  className="lucid-SidePanel lucid-SidePanel-is-expanded lucid-SidePanel-position-right lucid-SidePanel-is-animated"
  isAnimated={true}
  isModal={true}
  isShown={true}
  onBackgroundClick={[Function]}
  onEscape={[Function]}
  style={
    Object {
      "marginTop": 0,
    }
  }
>
  <div
    className="lucid-SidePanel-pane"
    style={
      Object {
        "marginTop": 0,
        "width": 200,
      }
    }
  >
    <div
      className="lucid-SidePanel-body"
    >
      <DragCaptureZone
        className="lucid-SidePanel-grabber"
        onDrag={[Function]}
        onDragCancel={[Function]}
        onDragEnd={[Function]}
        onDragStart={[Function]}
      >
        <GripperVerticalIcon
          aspectRatio="xMidYMid meet"
          color="primary"
          isClickable={false}
          isDisabled={false}
          onClick={[Function]}
          onSelect={[Function]}
          size={16}
          viewBox="0 0 16 16"
          width="20"
        />
      </DragCaptureZone>
      <div
        className="lucid-SidePanel-content"
      />
    </div>
  </div>
</Overlay>
`;
